# Asim-Flashcards

./: .gitignore  .pdm-python  .pdm.toml  README.md  pyproject.toml
asim_flashcards/: __init__.py  db_operations.py  views.py
asim_flashcards/templates/: about.html  calendar.html  calendar.js  flashcards.html  home.html  home.js  index.html  layout.html  login.html  navbar.html  navbar.js  settings.html  signup.html  start.html  start.js  study.html  study.js  templates - Shortcut.lnk  timer.js
static/js/: settings.js
static/scripts/: calendar.js  darkmode.js  home.js  navbar.js  scheme.js  settings.js  start.js  study.js
static/styles/: about.css  calendar.css  card.css  darkmode.css  flashcard.css  login.css  navbar.css  settings.css  start.css  study.css  timer.css
