[tool.poetry]
name = "asim-flashcards"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "asim_flashcards"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
